# clean-files

./: BUILD.md  Cargo.toml  EXPERT_ANALYSIS.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cleaner.rs  cli.rs  main.rs  platform.rs  scanner.rs  types.rs  utils.rs
tests/: deletion_verification.rs  integration_test.rs  reliability_assessment.rs  security_analysis.rs
