[package]
name = "clean-files"
version = "0.1.0"
edition = "2021"
authors = ["Clean Files Contributors"]
description = "A cross-platform development directory cleanup tool"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
ctrlc = "3.4"
rayon = "1.10"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.10"
